--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,9 +5,112 @@
     <title></title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles/navbar.css">
+
   </head>
   <body>
 
+    <div ng-if="checkLogin() == true">
+      <div class="container-fluid" ng-model="profile">
+          <!-- Second navbar for sign in -->
+          <nav class="navbar navbar-default">
+            <div class="container">
+              <!-- Brand and toggle get grouped for better mobile display -->
+              <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-2">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/#!/">Moustiques</a>
+              </div>
+              <!-- Collect the nav links, forms, and other content for toggling -->
+              <div class="collapse navbar-collapse" id="navbar-collapse-2">
+                <ul class="nav navbar-nav navbar-right">
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown">
+                                <span class="glyphicon glyphicon-user"></span> 
+                                <strong>{{profile.name}}</strong>
+                                <span class="glyphicon glyphicon-chevron-down"></span>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <div class="navbar-login">
+                                        <div class="row">
+                                            <div class="col-lg-4">
+                                                <p class="text-center">
+                                                    <span class="glyphicon glyphicon-user icon-size"></span>
+                                                </p>
+                                            </div>
+                                            <div class="col-lg-8">
+                                                <p class="text-left"><strong>{{profile.name}}</strong></p>
+                                                <p class="text-left small">{{profile.email}}</p>
+                                                <p class="text-left">
+                                                    <a ng-click="viewProfile()" class="btn btn-primary btn-block btn-sm">Profil</a>
+                                                    <a ng-click="viewListe()" class="btn btn-primary btn-block btn-sm">Mes moustiques</a>
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="divider"></li>
+                                <li>
+                                    <div class="navbar-login navbar-login-session">
+                                        <div class="row">
+                                            <div class="col-lg-12">
+                                                <p>
+                                                    <a ng-click="logout()" class="btn btn-danger btn-block">Déconnexion</a>
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+              </div><!-- /.navbar-collapse -->
+            </div><!-- /.container -->
+          </nav><!-- /.navbar -->
+      </div><!-- /.container-fluid -->
+    </div>
+
+    <div ng-if="checkLogin() == false">
+      <div class="container-fluid">
+          <!-- Second navbar for sign in -->
+          <nav class="navbar navbar-default">
+            <div class="container">
+              <!-- Brand and toggle get grouped for better mobile display -->
+              <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-2">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#!/">Moustiques</a>
+              </div>
+              <!-- Collect the nav links, forms, and other content for toggling -->
+              <div class="collapse navbar-collapse" id="navbar-collapse-2">
+
+                    <ul class="nav navbar-nav navbar-right">
+                      <li>
+                        <a>
+                          <button type="button" name="button" ng-click="gotoLogin()">Login</button>
+                        </a>
+                      </li>
+                      <li>
+                        <a>
+                            <button type="button" name="button" ng-click="gotoRegister()">Register</button>
+                        </a>
+                      </li>
+                    </ul>
+
+              </div><!-- /.navbar-collapse -->
+            </div><!-- /.container -->
+          </nav><!-- /.navbar -->
+      </div><!-- /.container-fluid -->
+    </div>
 
     <ng-view></ng-view>
 
